# AShWin

./: .gitignore  AShWin.sln  AShWinCommon.h  CMakeLists.txt  README.md
DVSEmulator/: CMakeLists.txt  DVSEmulator.vcxproj  DVSEmulator.vcxproj.filters  DVSEmulator_global.h  dvsemulator.cpp  dvsemulator.h
DVSSpikeVizualizer/: DVSSpikeVizualizer.py  DVSSpikeVizualizer.pyproj
Experiments/: 3000.nnc  3005.nnc  NOWTA.nnp  WTAabsNoauxSpot.nnp
LightSpot/: AShWinRL.inc  CMakeLists.txt
LightSpot/LightSpotResult/: LightSpotResult.py  LightSpotResult.pyproj
LightSpot/LightSpotVisualizer/: CMakeLists.txt  LightSpotVisualizer.cpp  LightSpotVisualizer.vcxproj  LightSpotVisualizer.vcxproj.filters
LightSpot/LightSpotVisualizer.win/: LightSpotVisualizer.win.cpp  LightSpotVisualizer.win.rc  LightSpotVisualizer.win.vcxproj  LightSpotVisualizer.win.vcxproj.filters  Resource.h  stdafx.h
LightSpot/environment/: CMakeLists.txt  LightSpotEnvironment.cpp  LightSpotEnvironment.def  LightSpotEnvironment.h  LightSpotEnvironment.vcxproj  LightSpotEnvironment.vcxproj.filters  dllmain.cpp
LightSpot/networks/: CMakeLists.txt
LightSpot/networks/LightSpot/: CMakeLists.txt  LightSpot.cpp  LightSpot.def  LightSpot.vcxproj  LightSpot.vcxproj.filters  dllmain.cpp
LightSpotPassive/: AShWin.inc  CMakeLists.txt  LightSpotPassive.cpp  LightSpotPassive.def  LightSpotPassive.h  LightSpotPassive.vcxproj  LightSpotPassive.vcxproj.filters
LightSpotPassive/LightSpotPassiveClustering/: CMakeLists.txt  LightSpotPassiveClustering.cpp  LightSpotPassiveClustering.def  LightSpotPassiveClustering.vcxproj  LightSpotPassiveClustering.vcxproj.filters  dllmain.cpp
LightSpotPassive/LightSpotPassiveRecord/: CMakeLists.txt  LightSpotPassiveRecord.vcxproj  main.cpp
LightSpotPassive/LightSpotPassiveResult/: LightSpotPassiveResult.py  LightSpotPassiveResult.pyproj  readpro.py
LightSpotPassive/cnvspikes/: cnvspikes.cpp  cnvspikes.vcxproj  cnvspikes.vcxproj.filters
LightSpotPassive/for_arxiv/: CMakeLists.txt  for_arxiv.cpp  for_arxiv.vcxproj  for_arxiv.vcxproj.filters
LightSpotPassiveRecord/: CMakeLists.txt  LightSpotPassiveRecord.vcxproj  main.cpp
